assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Holtwood+One+SC&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');

/*--------------------------------Header/Navigation--------------------------- */

#logo img {
    width: 250px;
    border: none;
    position:absolute;
    left:0;
    top:0;
    margin:10px

}
.navbar-toggler{
    margin:10px;
    font-size: .8rem;
    text-align: right;
}

.navbar{
    min-height: 100px;
}

.nav-link{
    font-size:18px;
    font-family: "Holtwood One SC", sans-serif;
    margin-top:20px;
    color:rgb(104,110,115);
    text-align: center;
    margin-left: 15px;
}
.nav-item i{
    display: block;
    display: none;
}

.nav-item:hover i{
    display:block;    
}

/*
I found this bit of code on stackoverflow which helped me understand how to display the active page link. 
https://stackoverflow.com/questions/17318170/highlighting-the-current-page-in-a-list-of-links-using-css-html
*/
.current a i, .current span{
    display:block;
    color:rgb(47, 49, 51)
}

/*----------------------------------Home Page -----------------------------*/

.parallax{

    background-image: url(../../assets/images/background.jpg);
    min-height:100vh;
}

.parallax{
  /* Create the parallax scrolling effect */
    position: relative;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display:block;
}

.text-field{
    position: relative;
    display:inline-block;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 60px;
    padding: 20px;
    text-align: center;
    font-size: 25px;
    width:400px;
    box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, .5);
    margin:10px 10px;
}

#main .row{
    margin-top:8%;
}
#dogwash img{
    margin:60px;
    display:inline-block;
    position:relative;
    padding: 20px;
    width:400px;
    margin:10px 10px;
}


.text-field h1{
    font-size: 1.8rem;
}

.text-field button {
    position:absolute;
}

#main i{
    margin:5px;
}
/*--------------------------------------Prices page---------------------------- */

#prices-banner{
    padding: 20px;
    column-count: 3;
    box-shadow: 10px 10px 10px 0 rgba(0, 0, 0, .5);
    text-align: left;
    margin-bottom:150px;
    margin-right:2%;
    margin-left:2%;
    margin-top:50px;
    justify-content: space-around;
    color: white;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 60px;
    padding: 20px;
    font-size: 25px;
   
}
#prices-banner ol{
    list-style-type:none;
}

#main img{
    position:absolute;;
    width:16em;
    z-index: 900;
    left:0;
    right:0;
    margin-left: auto;
    margin-right:auto;
    top:120px;

}
/*--------------------------------------Footer---------------------------- */

#footer-row {
    position: fixed;
    bottom: 0;
    background-color: rgb(104, 110, 115);
    width: 100%;
    min-height: 10vh;
    box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
}


#contact-details {
    font-family: "Roboto", sans-serif;
    color: white;
    margin-top: 10px;
    margin-left: 10px;
    display: block;
    position: relative;

}

#social-icons {
    font-size: 25px;
    margin-top: 15px;
    text-align: right;
    color: white;
    position: relative;

}

#social-icons i {
    margin-right: 10px;
}
/* I initially went with a bootstrap button as I wanted to style t
he button with a responsive shadow/no shadow effect to
mimic the button being depressed. Below is the bootstrap CSS for their button
with my alterations to achieve the desired effect */


.call-button{
    display: inline-block;
    font-weight: 400;
    line-height: 1.5;
    color:#212529;
    background-color:#f8f9fa;
    border-color:#f8f9fa;
    text-align:center;
    border:none;
    text-decoration: none;
    vertical-align: middle;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    min-width:180px;
    margin: 0;
    position: relative;
    top: 60%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    box-shadow: 2px 2px 11px 0 rgba(0, 0, 0, .5);
    padding: .375rem .75rem;
    font-size: 1rem;
    border-radius: .95rem;
}

.call-button:active{
    box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
}

button:focus {
    outline:0;
}

.text-field .call-button{
    top:100%;
}

/*----------------------Responsive Screen sizes ---------------------------*/

        /*********************************************************/

/*-----------------------Small Desktop--------------------------*/
@media only screen and (max-width: 991px){
    
    #logo img {
        width:180px;
    }
    .navbar{
        min-height:80px;
    }
    .nav-link{
        text-align:right;
    }
    .text-field{
        margin:0 auto;
    }

    #main .row{
        margin-top:8%;
    }
    #dogwash{
        height:300px;
        margin:0 auto;
    }
    #dogwash img {
        margin:30px 0;
        
    }
    #prices-banner{
        column-count: 2;
    }
    
}

/*-----------------------Tablet size screen--------------------------*/
@media only screen and (max-width: 768px){

    .text-field{
        position: relative;
        margin-left:10px 10px;
    }

    #main .row{
        margin-top:8%;
    }
   #dogwash{
        align-content: center;
        width:80%;
    }  
    #dogwash img{
        margin: 40px 20px 50px 20px;
    }
     #prices-banner{
        column-count: 1;
        font-size: 20px;
        margin-top:50px;
        margin-left: auto;
        margin-right: auto;
    }
    
}

/*-----------------------Mobile size screen--------------------------*/
@media only screen and (max-width: 580px){

    #footer-row button{
        display:none;
    }
    #contact-details{
        text-align: center;
        margin-top: 5px;
        margin-left: 5px;
    }

    #social-icons {
        text-align: center;
        margin-top: 5px;
    }

    .call-button{
        text-align: center;
        margin-top: 10px;
    }
    .text-field{
        width:90%;
        font-size: 16px;
        
    }

    #dogwash{
        width:100%;
    } 
    #dogwash img{
        margin:40px 5px 80px 5px;
        padding: 20px 5px 50px 5px;
        width:95%;
        } 
        
    #main img{
        width:10em;

} 
    
}

